--- a/README.adoc
+++ b/README.adoc
@@ -14,12 +14,13 @@ This Docker image provides:
 * https://asciidoctor.org/docs/asciidoctor-diagram/[Asciidoctor Diagram] 2.0.1 with Graphviz integration (supports plantuml and graphiz diagrams)
 * https://asciidoctor.org/docs/asciidoctor-pdf/[Asciidoctor PDF] 1.5.3
 * https://asciidoctor.org/docs/asciidoctor-epub3/[Asciidoctor EPUB3] 1.5.0.alpha.19
-* https://github.com/asciidoctor/asciidoctor-mathematical[Asciidoctor Mathematical] 0.3.1
+// * https://asciidoctor.org/docs/asciidoctor-fb2/[Asciidoctor EPUB3] 0.3.1
+* https://github.com/asciidoctor/asciidoctor-mathematical[Asciidoctor Mathematical] 0.3.5
 * https://asciidoctor.org/docs/asciidoctor-revealjs/[Asciidoctor reveal.js] 4.0.1
 * https://rubygems.org/gems/asciimath[AsciiMath]
 * Source highlighting using http://rouge.jneen.net[Rouge] or https://rubygems.org/gems/coderay[CodeRay] (Pygments not supported in the default Docker image as only Python 3 is available)
 * https://github.com/asciidoctor/asciidoctor-confluence[Asciidoctor Confluence] 0.0.2
-* https://github.com/asciidoctor/asciidoctor-bibtex[Asciidoctor Bibtex] 0.7.1
+* https://github.com/asciidoctor/asciidoctor-bibtex[Asciidoctor Bibtex] 0.8.0
 
 This image uses Alpine Linux 3.12 as base image.
 
