--- a/README.adoc
+++ b/README.adoc
@@ -33,6 +33,10 @@ added.
 
 == Installed Tools
 
-* sassc for handling asciidoctor templates
+* `sassc` for handling asciidoctor templates
+
+== Extras
+
+* @rapper script in `bin` called `docker-asciidoctor` to run the container
 
 // vim: set colorcolumn=80 textwidth=80 spell spelllang=en_us :
